Fixing site h1 look on mobile and moving search to right a little

--- a/app/public/css/site-identity.css
+++ b/app/public/css/site-identity.css
@@ -6,5 +6,6 @@
 }
 
 .site-identity__name {
-
+  padding-left: 15px;
+  padding-right: 15px;
 }
