--- a/app/public/css/title.css
+++ b/app/public/css/title.css
@@ -12,7 +12,7 @@
 .title__search {
   display: inline-block;
   position: absolute;
-  right: 10px;
+  right: 15px;
   margin-top: 12px;
   margin-bottom: 10px;
 }
